<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.microsoft.typespec</groupId>
  <artifactId>typespec-java-generator</artifactId>
  <version>1.0.0-beta.1</version>
  <packaging>pom</packaging>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <parallelizeTests>true</parallelizeTests>
    <spotless.config.path></spotless.config.path>
  </properties>

  <modules>
    <module>http-client-generator</module>
    <module>http-client-generator-mgmt</module>
    <module>http-client-generator-core</module>
  </modules>

  <profiles>
    <profile>
      <id>test</id>
      <activation>
        <property>
          <name>test</name>
        </property>
      </activation>
      <modules>
        <module>http-client-generator-test</module>
        <module>http-client-generator-clientcore-test</module>
      </modules>
    </profile>
  </profiles>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.0</version>
          <configuration>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.3</version>
          <configuration>
            <runOrder>alphabetical</runOrder>
            <useSystemClassLoader>false</useSystemClassLoader>
            <systemPropertyVariables combine.children="append">
              <junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
              <junit.jupiter.execution.parallel.mode.default>concurrent</junit.jupiter.execution.parallel.mode.default>
              <junit.jupiter.execution.parallel.enabled>${parallelizeTests}</junit.jupiter.execution.parallel.enabled>
            </systemPropertyVariables>
            <forkCount>1</forkCount>
            <testFailureIgnore>false</testFailureIgnore>
            <argLine>
              --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
              --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
              --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
              --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
              --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
              --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
            </argLine>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.2</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.11.3</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.4</version>
        </plugin>

        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>2.40.0</version>
          <configuration>
            <java>
              <includes>
                <include>src/main/java/**/*.java</include>
                <include>src/samples/java/**/*.java</include>
                <include>src/test/java/**/*.java</include>
              </includes>

              <removeUnusedImports/>
              <importOrder/>
              <eclipse>
                <version>4.21</version>
                <file>${spotless.config.path}eclipse-format-azure-sdk-for-java.xml</file>
              </eclipse>
            </java>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.40.0</version>
        <executions>
          <execution>
            <id>spotless-apply</id>
            <goals>
              <goal>apply</goal>
            </goals>
            <phase>process-sources</phase>
          </execution>
          <execution>
            <id>spotless-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
